Full project update (exclude target)